--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,12 @@
 			<artifactId>jaxb-runtime</artifactId>
 			<version>2.3.1</version>
 		</dependency>
-	</dependencies>
 
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.2</version>
+		</dependency>
+	</dependencies>
 
 </project>
